--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -7,8 +7,8 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <h2>Privacy Policy</h2> <p> ImaginationPossible built the WorldCup2018 app as an Ad Supported app. This SERVICE is provided by
-                    ImaginationPossible at no cost and is intended for use as is.
+    <h2>Privacy Policy</h2> <p> ImmaginationPossible built the World Cup 2018, Match Details and Scores app as an Ad Supported app. This SERVICE is provided by
+                    ImmaginationPossible at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
                     of Personal Information if anyone decided to use my Service.
                   </p> <p>If you choose to use my Service, then you agree to the collection and use of information in
@@ -16,10 +16,10 @@
                     the Service. I will not use or share your information with anyone except as described
                     in this Privacy Policy.
                   </p> <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is
-                    accessible at WorldCup2018 unless otherwise defined in this Privacy Policy.
+                    accessible at World Cup 2018, Match Details and Scores unless otherwise defined in this Privacy Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, I may require you to provide us with certain
                     personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
-                  </p> <p>The app does use third party services that may collect information used to identify you.</p> <div><p>Link to privacy policy of third party service providers used by the app</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p> I want to inform you that whenever you use my Service, in a case of
+                  </p> <p>The app does use third party services that may collect information used to identify you.</p> <div><p>Link to privacy policy of third party service providers used by the app</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p> I want to inform you that whenever you use my Service, in a case of
                     an error in the app I collect data and information (through third party products) on your phone
                     called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address,
                     device name, operating system version, the configuration of the app when utilizing my Service,
